--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1263,3 +1263,36 @@ p {
     margin-bottom: 6vw;
   }
 }
+
+.avatar {
+  width: 300px; 
+  height: auto; 
+  border-radius: 50%;
+  z-index: 888;
+}
+
+.description {
+  display: flex;
+  padding: 50px 60px 50px 0px;
+  height: 300px;
+  color: var(--title-color);
+  align-items: center;
+}
+
+@media (max-width: 992px) {
+  .avatar {
+    width: 300px; 
+  }
+  .description {
+    padding: 50px 100px;
+    height: auto;
+  }
+}
+
+/* Image Lazy Loading */
+.lazy {
+  opacity: 0;
+  min-height: 300px;
+  min-width: 300px;
+  margin: 10px;
+}
