--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1125,10 +1125,10 @@ p {
 
 @media (max-width: 500px) {
   .pre-loader .shape .circle {
-    transform: translateY(0) scale(0.1, 0.6);
+    margin: 0 2vw;
   }
   .pre-loader .second .circle {
-    transform: translateY(0) scale(0.1, 0.6);
+    margin: 0 2vw;
   }
 }
 
