--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -470,6 +470,18 @@ section .button button:hover{
   .home .text-three{
     font-size: 30px;
   }
+  h3 {
+    font-size: 20px !important;
+  }
+  .description {
+    padding: 30px 5% !important;
+  }
+  .skills .content{
+    padding:30px 0;
+  }
+  section {
+    padding-top: 10px;
+  }
 }
 
 @media (max-width:620px){
@@ -484,6 +496,27 @@ section .button button:hover{
 @media (max-width:550px){
   .br {
     display: block !important;
+  }
+}
+
+@media (max-width:480px){
+  .boxes {
+    transform: scale(0.9);
+  }
+  .avatar {
+    width: 250px !important;
+  }
+}
+
+@media (max-width:420px){
+  .boxes {
+    transform: scale(0.8);
+  }
+}
+
+@media (max-width:360px){
+  .boxes {
+    transform: scale(0.7);
   }
 }
 
