--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -9,7 +9,7 @@
 }
 :root{
     --primary-color:burlywood;
-    --bg-color: #232323;
+    --bg-color: #232323dd;
     --bg2-color: #2323236e;
     --bg3-color: #232323cc;
     --title-color: rgb(247, 229, 205);
