--- a/assets/css/scrollBtn.css
+++ b/assets/css/scrollBtn.css
@@ -8,7 +8,7 @@
 	border: 2px solid rgba(247, 229, 205, 0.5);
 	background: transparent;
 	padding: 0;
-	bottom: 2vw;
+	bottom: 120px;
 	right: 2vw;
 	cursor: pointer;
 	transform: scale(.9);
